Horizontal Scroll Fix

--- a/src/index.css
+++ b/src/index.css
@@ -38,3 +38,10 @@ a::before {
 a:hover::before {
   transform: scaleX(1);
 }
+
+@media screen and (max-width: 400px) {
+ *{
+  display: none;
+ }
+
+}
