--- a/src/routes/pages/contact-us/Contact.css
+++ b/src/routes/pages/contact-us/Contact.css
@@ -1,4 +1,5 @@
 #pleased{
+    padding-left: 1em;
     margin-top: 1em;
     font-size: 2em;
 }
